--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         background: linear-gradient(135deg, #fa709a 0%, #fee140 100%);
       }
       .bg-green-gradient {
-        background: linear-gradient(135deg, #30cfd0 0%, #330867 100%);
+        background: linear-gradient(135deg, #30cfd0 0%, #d0acfc 100%);
       }
       .bg-success-gradient {
         background: linear-gradient(135deg, #11998e 0%, #38ef7d 100%);
